# cmcf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
CMCF/: CMCF.py  CMakeLists.txt  vtkSlicerCMCFlibModuleLogicPython.pyi
CMCF/Resources/UI/: CMCF.ui
CMCFlib/: CMakeLists.txt  qSlicerCMCFlibModule.cxx  qSlicerCMCFlibModule.h  qSlicerCMCFlibModuleWidget.cxx  qSlicerCMCFlibModuleWidget.h
CMCFlib/Logic/: CMakeLists.txt  vtkSlicerCMCFlibLogic.cxx  vtkSlicerCMCFlibLogic.h
CMCFlib/Resources/: qSlicerCMCFlibModule.qrc
CMCFlib/Resources/UI/: qSlicerCMCFlibFooBarWidget.ui  qSlicerCMCFlibModuleWidget.ui
CMCFlib/Widgets/: qSlicerCMCFlibFooBarWidget.cxx  qSlicerCMCFlibFooBarWidget.h
cmake/: libigl.cmake
pycmcf/: animate.py  fast.py  side-by-side.zsh
scripts/: visualize_area_expansion.py
